objects/smagicinteract__SenderId_Profile_Map__c.object
<CustomObject>
    <fields>
        <fullName>smagicinteract__Default_SenderId__c</fullName>
        <formula>smagicinteract__SenderId_Lookup__r.smagicinteract__senderId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default SenderId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Profile_Id__c</fullName>
        <label>Profile Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Profile__c</fullName>
        <label>Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__SenderId_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SenderId Lookup</label>
        <referenceTo>smagicinteract__SMS_SenderId__c</referenceTo>
        <relationshipLabel>SenderId Profile Map</relationshipLabel>
        <relationshipName>SenderId_Profile_Map</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Sender_Id__c</fullName>
        <description>Deprecated from version 1.31. Use smagicinteract__Default_SenderId__c field instead.</description>
        <label>Sender Id (Deprecated)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SenderId_Profile_Map</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SenderId Profile Map</label>
    <listViews>
        <fullName>smagicinteract__Default_Sender_Id_List</fullName>
        <columns>NAME</columns>
        <columns>smagicinteract__Profile__c</columns>
        <columns>smagicinteract__Sender_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Default Sender Id List</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SenderId Profile Map</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>